--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
-    "name": "davejamesmiller/laravel-breadcrumbs",
+    "name": "cvaize/laravel-breadcrumbs",
     "description": "A simple Laravel-style way to create breadcrumbs.",
     "keywords": [
         "laravel"
     ],
-    "homepage": "https://github.com/davejamesmiller/laravel-breadcrumbs",
+    "homepage": "https://github.com/cvaize/laravel-breadcrumbs",
     "authors": [
+        {
+            "name": "Orlov Dmitry",
+            "email": "cviaze@gmail.com"
+        },
         {
             "name": "Dave James Miller",
             "email": "dave@davejamesmiller.com"
